sample-app-best-practices/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ol-best-practices
  labels:
    app.kubernetes.io/part-of: openlineage-best-practices
    opendatahub.io/dashboard: "true"
